--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "bootstrap": "5.0.2",
+    "dashjs": "4.0.0-npm",
+    "hls.js": "^1.0.7",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.35.2",
+    "shaka-player-react": "^1.1.2",
+    "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
+    "video.js": "^7.13.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -39,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.11",
+    "@types/video.js": "^7.3.26"
   }
 }
