--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "5.0.2",
     "dashjs": "4.0.0-npm",
     "hls.js": "^1.0.7",
+    "mux.js": "^5.12.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
@@ -22,7 +23,8 @@
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "video.js": "^7.13.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "xhook": "^1.4.9"
   },
   "scripts": {
     "start": "react-scripts start",
